[tool.poetry]
name = "mockup-python"
version = "0.1.0"
description = ""
authors = ["toma tanaka <ulti4929@gmail.com>"]
readme = "README.md"
packages = [{include = "mockup_python"}]

[tool.poetry.dependencies]
python = "^3.9"
optuna = "^3.5.0"
tqdm = "^4.66.1"
openai = "^1.11.1"
torch = "^2.2.0"
torchvision = "^0.17.0"
google-generativeai = "^0.4.0"
anthropic = "^0.18.1"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
scikit-learn = "^1.4.0"
seaborn = "^0.13.1"
ipywidgets = "^8.1.1"
ruff = "^0.3.3"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
